starting to use meson
added dockerfile

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -2,5 +2,5 @@
 #define _config_h_
 
 
-#cmakedefine DEFAULT_EXCEPTION_HANDLER "@DEFAULT_EXCEPTION_HANDLER@"
+#mesondefine DEFAULT_EXCEPTION_HANDLER
 #endif
